2007-12-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, itpp/base/bessel/gamma.cpp
	itpp/base/math/misc.h itpp/config_msvc.h
	itpp/stat/mog_generic.cpp: Add full support of std::isfinite(),
	std::isinf() and std::isnan()

	Instead of using isnan(), isinf() C99 macros and deprecated
	finite() function switch to their equivalents in std library. This
	should solve recent portability problems under MinGW/MSYS.

	* itpp/base/bessel/hyperg.cpp, itpp/base/bessel/iv.cpp,
	itpp/base/bessel/jv.cpp, itpp/base/bessel/k1.cpp,
	itpp/base/bessel/kn.cpp: Unify warning messages

	* itpp/base/bessel/airy.cpp, itpp/base/bessel/bessel_internal.h,
	itpp/base/bessel/chbevl.cpp, itpp/base/bessel/hyperg.cpp,
	itpp/base/bessel/i0.cpp, itpp/base/bessel/i1.cpp,
	itpp/base/bessel/iv.cpp, itpp/base/bessel/jv.cpp,
	itpp/base/bessel/k0.cpp, itpp/base/bessel/k1.cpp,
	itpp/base/bessel/kn.cpp, itpp/base/bessel/polevl.cpp: Clean up
	"include" and "using namespace" statements

	* itpp/base/bessel/bessel_internal.h, itpp/base/bessel/gamma.cpp,
	itpp/base/bessel/hyperg.cpp, itpp/base/bessel/iv.cpp,
	itpp/base/bessel/jv.cpp, itpp/base/bessel/sources.mk,
	itpp/base/bessel/struve.cpp, win32/itpp_acml.vcproj,
	win32/itpp_mkl.vcproj: Fixed wrong calculation of bessely()
	detected on Intel C++ compiler

	When IT++ was compiled with Intel C++ (icpc) compiler, the
	bessel_test failed on calculation of bessely() function for
	non-integer orders. This bug was caused by the fact that the
	ported bessel functions from Cephes Math Library should use
	a gamma function, which sets "signgam" global variable. But
	instead C99 tgamma() was used, which does not set "signgam".

	This patch adds explicit gam() and lgam() definitions, ported
	from the original Cephes Math Library, so all bessel functions
	in IT++ now use the proper gamma implementations.

2007-12-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/optim/newton_search.cpp: Initialize variables with zeros to